tests/cases/smoke/valid/func_block_body.ty
func add(a: int, b: int) -> int {
    return a + b
}
var total = add(1, 2)
