tests/cases/smoke/invalid/matrix_dtype_kw.ty
var bad = Matrix([1, 2], dtype: 1)
